--- a/backend/utils/email_templates/otp.html
+++ b/backend/utils/email_templates/otp.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <title>Email Verification OTP</title>
     <style>
-      /* Inline styles for email compatibility */
       body {
         font-family: Arial, sans-serif;
         margin: 0;
@@ -15,39 +14,60 @@
       .container {
         width: 100%;
         max-width: 600px;
-        margin: 0 auto;
-        padding: 20px;
+        margin: 30px auto;
+        padding: 30px;
         background-color: #ffffff;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
       }
 
       .header {
         text-align: center;
+        margin-bottom: 30px;
+      }
+
+      .header h2 {
+        color: #333333;
+        margin: 0;
+        font-size: 22px;
+      }
+
+      .greeting {
+        font-size: 16px;
+        margin-bottom: 20px;
+        color: #333;
+      }
+
+      .content p {
+        font-size: 16px;
+        color: #333333;
         margin-bottom: 20px;
       }
 
       table {
         width: 100%;
-        border-collapse: separate;
-        border-spacing: 0;
+        border-collapse: collapse;
+        background-color: #f9f9f9;
+        border-radius: 8px;
+        overflow: hidden;
         margin-bottom: 20px;
-        background-color: #ffffff;
-        border: 2px dashed #333333;
-        border-radius: 6px;
+        border: 2px dashed #4a4a4a;
       }
 
       .otp {
-        font-size: 24px;
+        font-size: 28px;
         font-weight: bold;
         text-align: center;
-        padding: 10px;
+        padding: 20px;
+        letter-spacing: 3px;
+        color: #000000;
       }
 
       .note {
         font-size: 14px;
         color: #666666;
         text-align: center;
+        padding: 10px 20px;
       }
     </style>
   </head>
@@ -55,41 +75,24 @@
   <body>
     <div class="container">
       <div class="header">
-        <h2>RESET PASSWORD Verification OTP</h2>
+        <h2>Reset Password - OTP Verification</h2>
       </div>
-      <h2>Hi #{name}</h2>
+      <div class="greeting">Hi #{name},</div>
       <div class="content">
-        <p>Your One-Time Password (OTP) for reseting the password :</p>
+        <p>Your One-Time Password (OTP) for resetting your password is:</p>
         <table>
           <tr>
-            <td
-              style="
-                border-radius: 6px 6px 0 0;
-                background-color: #f9f9f9;
-                padding: 10px;
-              "
-            >
-              <!-- Top rounded corners -->
-              <div class="otp">
-                <!-- OTP placeholder -->
-                #{otp}
-                <!-- Replace this with the actual OTP generated -->
-              </div>
+            <td class="otp">
+              #{otp}
             </td>
           </tr>
           <tr>
-            <td
-              style="
-                border-radius: 0 0 6px 6px;
-                background-color: #f9f9f9;
-                padding: 10px;
-              "
-            >
-              <!-- Bottom rounded corners -->
-              <p class="note">Please use this OTP to reset your password.</p>
+            <td class="note">
+              This OTP is valid for a limited time. Please do not share it with anyone.
             </td>
           </tr>
         </table>
+        <p>If you did not request a password reset, please ignore this email.</p>
       </div>
     </div>
   </body>
